--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>A Multiplayer Game</title>
   </head>
   <body>
- <h1>welcomee kaan projeck</h1>
+ <h1>welcome  SUDE</h1>
   </body>
 </html>
