--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
   <head>
     <title>A Multiplayer Game</title>
+   <canvas id="cnTuval" width="200" height="200" style="border:1px solid red">
+Tarayıcınız HTML5 desteklemiyor
+</canvas><br/>
+<input type="button" value="Çiz" onclick="ciz()" />
   </head>
   <body>
  <h1>welcome mola verdim ♥♥♥♥ ♥♥ ♥♥  </h1>
+    <script>
+ 
+function ciz() {
+ 
+    var tuval = document.getElementById("cnTuval");
+    var ctx = tuval.getContext("2d");
+    // Bundan sonra çizimlerimizi yapabiliriz.
+ 
+}
+ 
+</script>
   </body>
 </html>
