--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>A Multiplayer Game</title>
    <canvas id="cnTuval" width="200" height="200" style="border:1px solid red">
 Tarayıcınız HTML5 desteklemiyor
