--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@ function ciz() {
 	tuval.height=window.innerHeight-80;
     var ctx = tuval.getContext("2d");
     // Bundan sonra çizimlerimizi yapabiliriz.
+	
+	  ctx.fillStyle = "#FF0000";  // dolgu rengi tanımlama
+
+  ctx.fillRect(width/2,height/2,100,100); //canvasın 0,0 konumuna 150px genişlikte, 75px yükseklikte dikdörtgen çizer.
+ 
+ ctx.fillStyle = "#FF0000";  // dolgu rengi tanımlama
+
+  ctx.fillRect(width/2-300,height/2,100,100); //canvasın 0,0 konumuna 150px genişlikte, 75px yükseklikte dikdörtgen çizer.
+    
+  
+ 
  
 }
  ciz();
