--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ function ciz() {
 	
 	  ctx.fillStyle = "#FF0000";  // dolgu rengi tanımlama
 
-  ctx.fillRect(width/2,height/2,100,100); //canvasın 0,0 konumuna 150px genişlikte, 75px yükseklikte dikdörtgen çizer.
+  ctx.fillRect(width/2,height/2-100,100,100); //canvasın 0,0 konumuna 150px genişlikte, 75px yükseklikte dikdörtgen çizer.
  
  ctx.fillStyle = "#FF0000";  // dolgu rengi tanımlama
 
-  ctx.fillRect(width/2-300,height/2,100,100); //canvasın 0,0 konumuna 150px genişlikte, 75px yükseklikte dikdörtgen çizer.
+  ctx.fillRect(width/2-300,height/2-100,100,100); //canvasın 0,0 konumuna 150px genişlikte, 75px yükseklikte dikdörtgen çizer.
     
   
  
