--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 Tarayıcınız HTML5 desteklemiyor
 </canvas><br/>
 <input type="button" value="Çiz" onclick="ciz()" />
-<h1 style="text-align:center ">welcome mola verdim ♥♥♥♥ ♥♥ ♥♥  </h1>
+<h1 style="text-align:center ">mola verdim melike iyi geceler sana o zaman ♥♥♥♥ ♥♥ ♥♥  </h1>
   </head>
   <body>
   
