--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>A Multiplayer Game</title>
+    <title>LİNKE TIKLA AŞŞAĞI KAYDIR ;)</title>
     
    <canvas id="cnTuval"  width="100px" height="100px" style="border:1px solid red" bg-color ="#CC3BB">
 Tarayıcınız HTML5 desteklemiyor
