--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>LİNKE TIKLA AŞŞAĞI KAYDIR ;)</title>
+    <title>A Multiplayer Game</title>
     
    <canvas id="cnTuval"  width="100px" height="100px" style="border:1px solid red" bg-color ="#CC3BB">
 Tarayıcınız HTML5 desteklemiyor
 </canvas><br/>
 <input type="button" value="Çiz" onclick="ciz()" />
-<h1 style="text-align:center ">mola verdim melike iyi geceler sana o zaman ♥♥♥♥ ♥♥ ♥♥  </h1>
+<h1 style="text-align:center ">mola verdim ♥♥♥♥ ♥♥ ♥♥  </h1>
   </head>
   <body>
   
