--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ Tarayıcınız HTML5 desteklemiyor
 
    var width= window.innerWidth-30;
     
-//alert(width);
+alert(width);
 
      var height=window.innerHeight;
     
-//alert(height);
+alert(height);
 
 tuval.width =width;
 	tuval.height =height;
