--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ ctx.fillRect(width-200,58, 190,200);
   ctx.drawImage(puandurumu, width/2-150,height/2-50,300,100);
   ctx.drawImage(profilresmi, width-120,height/2-50,100,100);
   ctx.drawImage(profilresmi, width-width +10,height/2-50,100,100);
-  ctx.drawImage(profilresmi, width/2+50,height-220,100,100);
-  ctx.drawImage(profilresmi, width/2+50,height-height+100,100,100);
-  ctx.drawImage(profilresmi, width/2-150,height-height+100,100,100);
-  ctx.drawImage(profilresmi, width/2-150,height-220,100,100);
+  //ctx.drawImage(profilresmi, width/2+50,height-220,100,100);
+  //ctx.drawImage(profilresmi, width/2+50,height-height+100,100,100);
+  //ctx.drawImage(profilresmi, width/2-150,height-height+100,100,100);
+  //ctx.drawImage(profilresmi, width/2-150,height-220,100,100);
 // alttakiler kapalı kart resmi alanı
   ctx.drawImage(kapalikart, width-width+200,height-110,width/parseFloat(17.81),width/parseFloat(13.36));
   ctx.drawImage(kapalikart, width-width+300,height-110,width/parseFloat(17.81),width/parseFloat(13.36));
