--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ y=width/parseFloat(2.7);
 }
 
   ctx.drawImage(puandurumu, width/2-150,height/2-50,y,x);
-  ctx.drawImage(profilresmi, width-120,height/2-50,x,x);
+  ctx.drawImage(profilresmi, width-x+10,height/2-50,x,x);
   ctx.drawImage(profilresmi, width-width +10,height/2-50,x,x);
   //ctx.drawImage(profilresmi, width/2+50,height-220,100,100);
   //ctx.drawImage(profilresmi, width/2+50,height-height+100,100,100);
