--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Tarayıcınız HTML5 desteklemiyor
 
 
 
-   var width= window.innerWidth-30;
+   var width= window.innerWidth;
     
 alert(width);
 
