--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@ Tarayıcınız HTML5 desteklemiyor
 </canvas><br/>
 <input type="button" value="Çiz" onclick="ciz()" />
 <h1 style="text-align:center ">mola verdim ♥♥♥♥ ♥♥ ♥♥  </h1>
+	  <style>
+		  * { margin:0; padding:0; } /* to remove the top and left whitespace */
+
+html, body { width:100%; height:100%;  overflow: hidden; } /* just to be sure these are full screen*/
+
+canvas { display:block; } /* To remove the scrollbars */
+
+	  </style>
   </head>
   <body>
   
