--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>A Multiplayer Game</title>
     
-   <canvas id="cnTuval"  width="100px" height="100px" style="border:1px solid red" bg-color ="#CC3BB">
+   <canvas id="cnTuval"  width="100px" height="100px" bg-color ="#CC3BB">
 Tarayıcınız HTML5 desteklemiyor
 </canvas><br/>
 <input type="button" value="Çiz" onclick="ciz()" />
