--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ x=width/parseFloat(6.12)
 y=width/parseFloat(2.04);
 }
 
-  ctx.drawImage(puandurumu, width/2-width/parseFloat(9.10),height/2-50,y,x);
+  ctx.drawImage(puandurumu, width/2-width/parseFloat(9.10),height/2-50,300,100);
   ctx.drawImage(profilresmi, width-110,height/2-50,x,x);
   ctx.drawImage(profilresmi, width-width +10,height/2-50,x,x);
   //ctx.drawImage(profilresmi, width/2+50,height-220,100,100);
