--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@ tuval.width =width;
 
    
 	
-    
+    if(width<=612){
+alert("hello");
+x=width/parseFloat(6.12);
+y=width/parseFloat(2.04);
+}
+
 
 
  
