--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@ else if(canvas.height<=612){
 }
 
 
-   ctx.drawImage(puandurumu, canvas.width/2-y,canvas.height/2-x/2,y*2,x);
-   ctx.drawImage(profilresmi, canvas.width-x-10,canvas.height/2-x/2,x,x);
-   ctx.drawImage(profilresmi, canvas.width-canvas.width+10,canvas.height/2-x/2,x,x);
+   ctx.drawImage(puandurumu, canvas.width/2-y,canvas.height/2-x/2-50,y*2,x);
+   ctx.drawImage(profilresmi, canvas.width-x-10,canvas.height/2-x/2-50,x,x);
+   ctx.drawImage(profilresmi, canvas.width-canvas.width+10,canvas.height/2-x/2-50,x,x);
 
-  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-x-x,x,x);
-  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-canvas.height+x,x,x);
-  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-canvas.height+x,x,x);
-  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-x-x,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-x-x-50,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-canvas.height+x-50,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-canvas.height+x-50,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-x-x-50,x,x);
 
 // alttakiler kapalı kart resmi alanı
  // ctx.drawImage(kapalikart, width-width+10,height-110,width/parseFloat(17.81),width/parseFloat(13.36));
