--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@ else if(canvas.height<=612){
 }
 
 
-   ctx.drawImage(puandurumu, canvas.width/2-y,canvas.height/2-x/2-80,y*2,x);
-   ctx.drawImage(profilresmi, canvas.width-x-10,canvas.height/2-x/2-80,x,x);
-   ctx.drawImage(profilresmi, canvas.width-canvas.width+10,canvas.height/2-x/2-80,x,x);
+   ctx.drawImage(puandurumu, canvas.width/2-y,canvas.height/2-x,y*2,x);
+   ctx.drawImage(profilresmi, canvas.width-x-10,canvas.height/2-x,x,x);
+   ctx.drawImage(profilresmi, canvas.width-canvas.width+10,canvas.height/2-x,x,x);
 
-  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-3*x,x,x);
-  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-canvas.height+x-60,x,x);
-  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-canvas.height+x-60,x,x);
-  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-3*x,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-3*x+50,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2+x/2,canvas.height-canvas.height+40,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-canvas.height+40,x,x);
+  ctx.drawImage(profilresmi, canvas.width/2-y,canvas.height-3*x+50,x,x);
 
 // alttakiler kapalı kart resmi alanı
   ctx.drawImage(kapalikart, canvas.width-canvas.width/2+3,canvas.height-y/parseFloat(1.36)-10,x/parseFloat(1.4),y/parseFloat(1.36));
