--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ position: absolute;
              
          
         function ciz(){
- alert("murat senin AQ");
+ alert("buttontiklandi");
 
         };
 
